Fixes z-indexes for search and quicklinks related

--- a/src/css/skins/printdeal/themes/fr-responsive/_settings.scss
+++ b/src/css/skins/printdeal/themes/fr-responsive/_settings.scss
@@ -8,23 +8,22 @@ $product-nav-toggler-width: 4em;
 $z-indexes: (
     chuck-norris:       2147483647,
 
-    loader:             82,
-    modal:              81,
-    modal-backdrop:     80,
+    loader:             72,
+    modal:              71,
+    modal-backdrop:     70,
 
-    review:             70,
+    review:             60,
 
-    sticky-share:       60,
+    sticky-share:       50,
 
-    sitenav-item-small: 51,
-    site-subnav-small:  50,
+    sitenav-item-small: 43,
+    site-subnav-small:  42,
+    sitenav-item-large: 41,
+    site-subnav-large:  40,
 
-    search-form:        42,
-    search-results:     41,
-    search-backdrop:    40,
-
-    sitenav-item-large: 31,
-    site-subnav-large:  30,
+    search-form:        32,
+    search-results:     31,
+    search-backdrop:    30,
 
     productnav:         20,
 
